added header, navigation, slider

--- a/coltermay.com/css/style.css
+++ b/coltermay.com/css/style.css
@@ -2,7 +2,8 @@
   position: relative;
   overflow: hidden;
   height: 100vh;
-  width: 100vw; }
+  width: 100vw;
+  z-index: -8; }
 
 .slide {
   position: absolute;
@@ -14,15 +15,16 @@
   transition: opacity 0.4s ease-in-out; }
   .slide__content {
     position: absolute;
-    color: #333;
-    background-color: rgba(255, 255, 255, 0.8);
+    color: #fff;
+    background-color: rgba(14, 4, 4, 0.699);
     padding: 30px;
     bottom: 70px;
     left: -600px;
     opacity: 0;
     width: 600px; }
     .slide__content h1 {
-      margin-bottom: 10px; }
+      margin-bottom: 10px;
+      color: #e2ca7b; }
   .slide.current {
     opacity: 1; }
   .slide.current .slide__content {
@@ -30,17 +32,17 @@
     transform: translateX(600px);
     transition: all 0.7s ease-in-out 0.2s; }
   .slide:first-child {
-    background: url(../img/img1.jpg) no-repeat center center/cover; }
+    background: url(../img/EasterSunrise-min.jpg) no-repeat center center/cover; }
   .slide:nth-child(2) {
-    background: url(../img/img2.jpg) no-repeat center center/cover; }
+    background: url(../img/EasterSunset-min.JPEG) no-repeat center center/cover; }
   .slide:nth-child(3) {
-    background: url(../img/img3.jpg) no-repeat center center/cover; }
+    background: url(../img/TheTowers-min.jpg) no-repeat center center/cover; }
   .slide:nth-child(4) {
-    background: url(../img/img4.jpg) no-repeat center center/cover; }
+    background: url(../img/ChasingDusk-min.jpg) no-repeat center center/cover; }
   .slide:nth-child(5) {
     background: url(../img/img5.jpg) no-repeat center center/cover; }
   .slide__buttons button {
-    border: 2px solid #fff;
+    border: 2px solid #e2ca7b;
     background-color: transparent;
     color: #fff;
     font-size: 20px;
@@ -80,6 +82,72 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  background: #333;
-  color: #fff;
-  line-height: 1.6; }
+  background: #070707;
+  color: #fff; }
+
+.main__nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  background-color: rgba(14, 4, 4, 0.699);
+  justify-content: space-between;
+  align-items: center; }
+  .main__nav .logo {
+    position: relative;
+    font-size: 1.4em;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 1.3px;
+    font-weight: 700;
+    margin-left: 40px;
+    color: #e2ca7b; }
+
+.nav {
+  position: relative;
+  display: flex;
+  font-size: 14px; }
+  .nav__item {
+    list-style: none; }
+  .nav__link {
+    display: inline-block;
+    color: red;
+    margin-right: 40px;
+    text-decoration: none;
+    font-size: 1em;
+    color: #e2ca7b;
+    font-weight: 200;
+    text-transform: uppercase;
+    transition: all 6s; }
+
+.social__icons a {
+  color: #e2ca7b;
+  font-size: 1.4em; }
+  .social__icons a:last-child {
+    margin-right: 40px;
+    margin-left: 8px; }
+  .social__icons a:hover {
+    color: #fff; }
+
+.scroll {
+  position: absolute;
+  top: 80%;
+  left: 94%; }
+  .scroll p {
+    font-weight: 300;
+    color: #e2ca7b;
+    text-transform: uppercase;
+    font-size: 13px;
+    letter-spacing: 7px;
+    transform: translate(0, 0) rotate(270deg); }
+  .scroll::after {
+    content: '';
+    position: relative;
+    top: 90%;
+    left: 80%;
+    width: 70px;
+    height: 55px;
+    background-color: chartreuse;
+    transform: translate(30px, 20px) rotate(90deg); }
