--- a/coltermay.com/sass/_base.scss
+++ b/coltermay.com/sass/_base.scss
@@ -10,9 +10,9 @@
 }
 body {
     font-family: $font-primary;
-    background: #333;
+    background: rgb(7, 7, 7);
     color: #fff;
-    line-height: 1.6;
+    // line-height: 1.5;
 }
 
 
