--- a/coltermay.com/sass/_variables.scss
+++ b/coltermay.com/sass/_variables.scss
@@ -1,2 +1,9 @@
-// $color-primary: #55c57a;
+$color-primary: #e2ca7b;
+$color-white: #fff;
+
+// #f3dba3
+// #ecd99f
+// #e2ca7b primary
+
+
 $font-primary: 'Roboto', sans-serif;
