--- a/coltermay.com/sass/_variables.scss
+++ b/coltermay.com/sass/_variables.scss
@@ -1,5 +1,9 @@
 $color-primary: #e2ca7b;
 $color-white: #fff;
+$color-grey-light: #a6a6a6;
+$color-grey-dark: #5b5b5b;
+$color-black-bg: rgba(14, 4, 4, 0.699);
+$color-black: #000000;
 
 // #f3dba3
 // #ecd99f
