--- a/coltermay.com/sass/_variables.scss
+++ b/coltermay.com/sass/_variables.scss
@@ -1,4 +1,5 @@
 $color-primary: #e2ca7b;
+$color-primary-light: #ecd99f;
 $color-white: #fff;
 $color-grey-light: #a6a6a6;
 $color-grey-dark: #5b5b5b;
