--- a/coltermay.com/sass/_navigation.scss
+++ b/coltermay.com/sass/_navigation.scss
@@ -3,9 +3,10 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100px;
+    height: 80px;
     display: flex;
     background-color: rgba(14, 4, 4, 0.788);
+    box-shadow: 0px 10px 40px -10px rgba(0,0,0,0.75);
     overflow: hidden;
     justify-content: space-between;
     align-items: center;
@@ -47,7 +48,7 @@
             content: '';
 		    width: 0;
 		    height: 2px;
-            margin-top: 5px;
+            margin-top: 30px;
 		    background-color: $color-primary;
 		    position: absolute;
 		    top: 100%;
@@ -55,15 +56,14 @@
         }
 
         &:hover {
-            color: $color-grey-light;;
+            color: $color-grey-dark;
         }
 
     }
 }
 
 .nav__item:hover .nav__link:before {
-    width: 50%;
-    transform: translatex(100%);
+    width: 100%;
     transition: .5s;
 }
 
@@ -73,7 +73,7 @@
 
 .social__icons a {
     color: $color-primary;
-    font-size: 1.4em;
+    font-size: 1.2em;
 
     &:last-child {
         margin-right: 40px;
@@ -90,8 +90,6 @@
     top: 80%;
     left: 94%;
     transform: translate(0, 0) rotate(270deg);
-
-
 
     & p {
         font-weight: 300;
