--- a/coltermay.com/sass/_slider.scss
+++ b/coltermay.com/sass/_slider.scss
@@ -4,6 +4,7 @@
     height: 100vh;
     width: 100vw;
     z-index: -8;
+    
 }
 
 .slide {
@@ -13,38 +14,38 @@
     width: 100%;
     height: 100%;
     opacity: 0;
-    transition: opacity 0.4s ease-in-out;
+    transform: scale(1.2);
+    transition: all 2s ease-in-out;
 
-    &__content {
-        position: absolute;
-        color: $color-white;
-        background-color: $color-black-bg;
-        padding: 30px;
-        bottom: 70px;
-        left: -600px;
-        opacity: 0;
-        font-weight: 200;
-        line-height: 1.5;
-        letter-spacing: 1.2;
-        width: 600px;
-
-        & h1 {
-            margin-bottom: 10px;
-            color: $color-primary;
-            font-weight: 400;
+        &__content {
+            position: absolute;
+            color: $color-white;
+            background-color: $color-black-bg;
+            padding: 30px 30px 30px 60px;
+            bottom: 70px;
+            left: -600px;
+            opacity: 0;
+            font-weight: 200;
+            line-height: 1.5;
+            letter-spacing: 1.2;
+            width: 600px;
+         
+            & h1 {
+                margin-bottom: 10px;
+                color: $color-primary;
+                font-weight: 400;
+            }
         }
+
+        &.current {
+            opacity: 1;
+            transform: scale(1);
     }
-
-    &.current {
-        opacity: 1;
-
-    }
-
 
     &.current &__content {
         opacity: 1;
         transform: translateX(600px);
-        transition: all 0.7s ease-in-out 0.2s ;
+        transition: all 0.7s ease-in-out 0.9s;
     }
 
 
@@ -104,14 +105,14 @@
     }
 }
 
-@media(max-width: 500px) {
-    .slide .slide__content {
-        bottom: -300px;
-        left: 0;
-        width: 100%;
-    }
+// @media(max-width: 500px) {
+//     .slide .slide__content {
+//         bottom: -300px;
+//         left: 0;
+//         width: 100%;
+//     }
 
-    .slide.current .slide__content {
-        transform: translateY(-300px);
-    }
-}
+//     .slide.current .slide__content {
+//         transform: translateY(-300px);
+//     }
+// }
