--- a/coltermay.com/sass/_typography.scss
+++ b/coltermay.com/sass/_typography.scss
@@ -1,28 +1,50 @@
-.heading__primary {
-    display: inline-block;
+.heading__secondary {
+    position: relative;
+    // display: inline-block;
     text-transform: uppercase;
     color: $color-primary;
     font-size: 2.2em;
     font-weight: 400;
     letter-spacing: 3px;
-    margin:0 0 30px 88px;
-    // text-align: center;
+    padding: 70px 0 30px 88px;
+    // margin:0px 0 30px 88px;
+
+    &:before {
+        content: attr(data-text);
+        position: absolute;
+        top: 48%;
+        left: 2.4%;
+        font-size: 1.1em;
+        color: $color-grey-dark;
+        pointer-events: none;
+
+    }
 
     &:after {
         position: absolute;
         content:"";
-        top: 115%;
-        left: 6.7%;
-        width: 40px;
+        top: 87%;
+        left: 7%;
+        width: 4%;
         height: 2px;
-        background-color:$color-primary;
+        background-color:$color-grey-light;
     }
 }
 
-.heading__secondary {
+.heading__terceary {
     font-size: 1.7em;
     text-transform: uppercase;
     color: $color-primary;
     letter-spacing: 1.8px;
     font-weight: 400;
+
 }
+
+// .heading__terceary {
+//     font-size: 1.5em;
+//     color: $color-white;
+//     font-weight: 400;
+//     text-transform: uppercase;
+//     letter-spacing: 1.8px;
+//     margin-bottom: 8px;
+// }
