--- a/coltermay.com/sass/main.scss
+++ b/coltermay.com/sass/main.scss
@@ -1,7 +1,10 @@
 @import "variables";
+@import "mixins";
 @import "typography";
 @import "slider";
 @import "base";
 @import "navigation";
 @import "about";
+@import "art";
+@import "contact";
 
